--- a/MatchComabteTest/MatchComabteTest.csproj
+++ b/MatchComabteTest/MatchComabteTest.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
