--- a/SaleApi/appsettings.json
+++ b/SaleApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Password=R21l12rpg;Persist Security Info=True;User ID=sa;Initial Catalog=MatchCombate;Data Source=NAV12\\NAV12"
+    "DefaultConnection": "server=localhost;port=3306;database=MatchCombate;user=root;password=r21l12rpg"
   },
   "Logging": {
     "LogLevel": {
