--- a/SaleApi/appsettings.json
+++ b/SaleApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=MatchCombate;user=root;password=r21l12rpg"
+    "DefaultConnection": "server=localhost;port=3306;database=MatchCombate;user=root;password=r21l12rpg12"
   },
   "Logging": {
     "LogLevel": {
