--- a/SaleApi/appsettings.json
+++ b/SaleApi/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=MatchCombate;user=root;password=r21l12rpg12"
   },
+  "TokenConfigurations": {
+    "Audience": "MatchCombatService",
+    "Issuer": "UsuarioMatch",
+    "Seconds": 120
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
